--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 server.port=6002
 server.servlet.context-path=/ShopmeAdmin
+
+spring.datasource.url=jdbc:mysql://localhost:9000/shopmedb
+spring.datasource.username=root
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
