--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ local.properties
 .settings/
 .loadpath
 .recommenders
+ShopmeProject.iml
+.idea
 
 # External tool builders
 .externalToolBuilders/
