--- a/.gitignore
+++ b/.gitignore
@@ -138,6 +138,11 @@ $RECYCLE.BIN/
 ShopmeWebParent/ShopmeBackEnd/user-photos/**
 ShopmeWebParent/ShopmeBackEnd/categories-images/**
 ShopmeWebParent/ShopmeBackEnd/product-images/**
+ShopmeWebParent/ShopmeBackEnd/brand-logos/**
+
+ShopmeWebParent/categories-images/**
+ShopmeWebParent/product-images/**
+ShopmeWebParent/brand-logos/**
 
 # Windows shortcuts
 *.lnk
