--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.username=root
 spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.show-sql=true
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
@@ -18,3 +18,5 @@ logging.logback.rollingpolicy.max-file-size=2MB
 logging.logback.rollingpolicy.total-size-cap=100MB
 logging.logback.rollingpolicy.max-history=14
 logging.logback.rollingpolicy.clean-history-on-start=true
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
