--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/application.yml
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/application.yml
@@ -24,11 +24,11 @@ spring:
     jpa:
         hibernate:
             ddl-auto: update
-            show-sql: true
         properties:
             hibernate:
                 dialect: org.hibernate.dialect.MySQLDialect
                 format_sql: true
+                show_sql: false
 
     security:
       oauth2:
@@ -40,3 +40,9 @@ spring:
                 scope:
                   - email
                   - profile
+              facebook:
+                client-id: 226059850134920
+                client-secret: 8c30c0f7840365fda3d3fe0198b58230
+                scope:
+                  - email
+                  - public_profile
