--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=6002
 server.servlet.context-path=/ShopmeAdmin
 
-spring.datasource.url=jdbc:mysql://localhost:9000/shopmedb
+spring.datasource.url=jdbc:mysql://localhost:9000/shopmedb?serverTimezone=Africa/Luanda
 spring.datasource.username=root
 spring.datasource.password=
 
@@ -9,6 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.jdbc.time_zone=Africa/Luanda
 
 logging.level.root =warn
 logging.level.com.shopme=debug
