--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/application.yml
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/application.yml
@@ -19,7 +19,7 @@ server:
 spring:
     datasource:
         password: ''
-        url: jdbc:mysql://localhost:9000/shopmedb
+        url: jdbc:mysql://localhost:9000/shopmedb?serverTimezone=Africa/Luanda
         username: root
     jpa:
         hibernate:
@@ -29,6 +29,8 @@ spring:
                 dialect: org.hibernate.dialect.MySQLDialect
                 format_sql: true
                 show_sql: false
+                jdbc:
+                  time_zone: Africa/Luanda
 
     security:
       oauth2:
