--- a/ShopmeWebParent/pom.xml
+++ b/ShopmeWebParent/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.0</version>
+        <version>3.1.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.shopme</groupId>
@@ -88,11 +88,19 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
-        <dependency>
+    <!--    <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
+        </dependency>-->
+
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.21</version>
         </dependency>
+
 
         <!-- https://mvnrepository.com/artifact/org.webjars/font-awesome -->
         <dependency>
