ShopmeBackEnd(General Module). 1. Removal of all @Param and @RequestParam Annotation 2. Update Database ports

--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/application.yml
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/application.yml
@@ -18,8 +18,8 @@ server:
         context-path: /Shopme
 spring:
     datasource:
-        password: ''
-        url: jdbc:mysql://localhost:9000/shopmedb?serverTimezone=Africa/Luanda
+        password: 'root'
+        url: jdbc:mysql://localhost:3306/shopmedb?serverTimezone=Africa/Luanda
         username: root
     jpa:
         hibernate:
