--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=6002
 server.servlet.context-path=/ShopmeAdmin
 
-spring.datasource.url=jdbc:mysql://localhost:9000/shopmedb?serverTimezone=Africa/Luanda
+spring.datasource.url=jdbc:mysql://localhost:3306/shopmedb?serverTimezone=Africa/Luanda
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
